# axum-zero

./: Cargo.toml  Dockerfile  README.md  deploy.sh  justfile  rustdb.nb3  rustdb.sql
antd-admin/: .env  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
antd-admin/nswag/: postprocess.cjs  refresh.bat  service.config.nswag
antd-admin/src/: App.tsx
antd-admin/src/api/: app-consts.ts  error-handler.ts  http-client.ts  service-proxy-factory.ts
antd-admin/src/utils/: storageUtils.ts
src/: main.rs
src/aop/aspects/: logger.rs  timer.rs
src/common/: autofac.rs  daily_logfile.rs  error.rs  extractor.rs  mod.rs  result.rs
src/config/: log4rs.yaml
src/dao/system/: mod.rs  sys_dept_dao.rs  sys_dict_data_dao.rs  sys_dict_type_dao.rs  sys_login_log_dao.rs  sys_menu_dao.rs  sys_notice_dao.rs  sys_operate_log_dao.rs  sys_post_dao.rs  sys_role_dao.rs  sys_role_dept_dao.rs  sys_role_menu_dao.rs  sys_user_dao.rs  sys_user_post_dao.rs  sys_user_role_dao.rs
src/handler/system/: mod.rs  sys_dept_handler.rs  sys_dict_data_handler.rs  sys_dict_type_handler.rs  sys_login_log_handler.rs  sys_menu_handler.rs  sys_notice_handler.rs  sys_operate_log_handler.rs  sys_post_handler.rs  sys_role_handler.rs  sys_user_handler.rs
src/inject/: autofac.rs  inject_component.rs  inject_provided.rs  mod.rs
src/middleware/: auth.rs
src/model/system/: mod.rs  sys_dept_model.rs  sys_dict_data_model.rs  sys_dict_type_model.rs  sys_login_log_model.rs  sys_menu_model.rs  sys_notice_model.rs  sys_operate_log_model.rs  sys_post_model.rs  sys_role_dept_model.rs  sys_role_menu_model.rs  sys_role_model.rs  sys_user_model.rs  sys_user_post_model.rs  sys_user_role_model.rs
src/service/: readme.txt
src/utils/: db.rs  jwt_util.rs  time_util.rs
(+53 files in other folders)
